css/wechat-fix.css
.prettyprint {
  font-family: Consolas, Menlo, Courier, monospace;
}

.prettyprint pre p {
  min-height: 10px;
}

#list1 ul {
  padding-left: 10px;
}

ul li.task-list-list {
  list-style-type: none;;
  padding: 0 10px;
}

ul, ol {
  margin: 0;
  padding: 0;
  padding-left: 40px;
}

.task-list-list {
  margin: 0;
  padding: 0;
}

table {
  display: table;
  width: 100%;
}

table tr:nth-child(2n) {
  background-color: #f8f8f8;
}

.task-list-list.checked {
  color: #159957;
}

.task-list-list.uncheck {
  color: #bfc1bf;
}

.task-list-list img {
  height: 20px;
  width: 20px;
  margin: 0 10px;
  top: 4px;
  position: relative;
}

.super {

}

h1.super {
  white-space: normal;
  border: none;
  margin: 5px 0 0;
  padding: 10px;
  font-size: 24px;
  line-height: 20px;
  border-left-width: 6px;
  border-left-style: solid;
  border-radius: 3px;
  color: #FFFBF0;
  border-left-color: #30DFF3;
  background-color: #4B5CC4;
}

h2.super {
  white-space: normal;
  border: none;
  margin: 5px 0 0;
  padding: 10px;
  font-size: 20px;
  line-height: 20px;
  border-left-width: 12px;
  border-left-style: solid;
  border-radius: 3px;
  color: #FFFBF0;
  border-left-color: #30DFF3;
  background-color: #4B5CC4;
}

h3.super {
  white-space: normal;
  border: none;
  margin: 5px 0 0;
  padding: 10px;
  font-size: 18px;
  line-height: 20px;
  border-left-width: 18px;
  border-left-style: solid;
  border-radius: 3px;
  color: #FFFBF0;
  border-left-color: #30DFF3;
  background-color: #4B5CC4;
}

h4.super {
  white-space: normal;
  border: none;
  margin: 5px 0 0;
  padding: 10px;
  font-size: 16px;
  line-height: 20px;
  border-left-width: 24px;
  border-left-style: solid;
  border-radius: 3px;
  color: #FFFBF0;
  border-left-color: #30DFF3;
  background-color: #4B5CC4;
}

ruby {
  background-color: rgba(67, 193, 105, 0.5);
  margin: 4px;
  padding-right: 2px;
  padding-left: 2px;
}

ruby rt {
  font-style: italic;
  background-color: rgba(67, 193, 105, 0.2);
}

